--- a/WebUI/FMIRatingsWeb/public_html/index.html
+++ b/WebUI/FMIRatingsWeb/public_html/index.html
@@ -4,7 +4,7 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<html>
+<html ng-app="indexPage" ng-controller="indexController" >
     <head>
         <title>FMI Ratings</title>
         <meta charset="utf-8">
@@ -16,7 +16,8 @@ and open the template in the editor.
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/main.css">
 
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
         <script src="js/vendor/jquery/jquery.js"></script>
         
         <!--<script src="js/controllers.js"></script>-->
