--- a/WebUI/FMIRatingsWeb/public_html/nonregistered-user-homepage.html
+++ b/WebUI/FMIRatingsWeb/public_html/nonregistered-user-homepage.html
@@ -4,7 +4,7 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<html>
+<html >
     <head>
         <title>FMI Ratings</title>
         <meta charset="utf-8">
@@ -16,7 +16,7 @@ and open the template in the editor.
 
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/main.css">
-
+ <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
         <script src="js/vendor/jquery/jquery.js"></script>
         <script src="js/bootstrap.min.js"></script>
     </head>
@@ -33,7 +33,7 @@ and open the template in the editor.
                     </div>
 
                     <!--Log in modal-->
-                    <div class="modal fade" id="modal-login" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                    <div ng-hide="loginHide" class="modal fade" id="modal-login" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
@@ -41,10 +41,10 @@ and open the template in the editor.
                                     <h4 class="modal-title" id="myModalLabel">Вход</h4>
                                 </div>
                                 <div class="modal-body">
-                                    <form role="form" ng-controller="LoginCtrl" >
+                                    <form ng-submit="login()" role="form" ng-controller="LoginCtrl" class="css-form" >
                                         <div class="form-group">
                                             <label for="email">Email адрес</label>
-                                            <input type="email" class="form-control" id="email" placeholder="Въведи email" ng-model="loginFormInfo.Name"  required>
+                                            <input type="text" class="form-control" id="email" placeholder="Въведи email" ng-model="loginFormInfo.Name"  required>
                                         </div>
                                         <div class="form-group">
                                             <label for="pass">Парола</label>
@@ -55,7 +55,7 @@ and open the template in the editor.
                                                                                         <input type="checkbox"> Check me out
                                                                                     </label>
                                                                                 </div>-->
-                                        <button type="submit" class="btn btn-primary" ng-click="login()">Вход</button>
+                                        <button type="submit" class="btn btn-primary">Вход</button>
                                     <span>{{loginFormInfo}}</span>
                                     </form>
                                 </div>
@@ -65,7 +65,7 @@ and open the template in the editor.
 
                     <!--Register modal-->
 
-                    <div class="modal fade" id="modal-register" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                    <div ng-hide="registrationHide" class="modal fade" id="modal-register" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
@@ -73,7 +73,7 @@ and open the template in the editor.
                                     <h4 class="modal-title" id="myModalLabel">Регистрация</h4>
                                 </div>
                                 <div class="modal-body">
-                                    <form role="form" ng-controller="RegistrationCtrl" id="register-form">
+                                    <form ng-submit="saveData()" role="form" ng-controller="RegistrationCtrl" id="register-form" class="css-form">
                                         <div class="form-group">
                                             <label for="username">Потребителско име</label>
                                             <div class="input-group">
@@ -147,9 +147,8 @@ and open the template in the editor.
                                             <input type="text" class="form-control" id="graduation-year" ng-model="formInfo.GraduationYear" placeholder="Година на завършване">
                                         </div>
 
-                                        <button type="submit" class="btn btn-primary" ng-click="saveData()" id = "registerButton">Регистрация</button>
+                                        <button type="submit" class="btn btn-primary"  id = "registerButton">Регистрация</button>
 
-                                        <span>{{formInfo}}</span>
                                     </form>
                                 </div>
                             </div>
@@ -161,8 +160,7 @@ and open the template in the editor.
             </div>
         </div>
         <script src="js/registration-controller.js"></script>
-        <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>-->
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
+
     </body>
 </html>
 
