--- a/WebUI/FMIRatingsWeb/public_html/nonregistered-user-homepage.html
+++ b/WebUI/FMIRatingsWeb/public_html/nonregistered-user-homepage.html
@@ -43,7 +43,7 @@ and open the template in the editor.
                                 <div class="modal-body">
                                     <form ng-submit="login()" role="form" ng-controller="LoginCtrl" class="css-form" >
                                         <div class="form-group">
-                                            <label for="email">Email адрес</label>
+                                            <label for="email">Потребителско име</label>
                                             <input type="text" class="form-control" id="email" placeholder="Въведи email" ng-model="loginFormInfo.Name"  required>
                                         </div>
                                         <div class="form-group">
