--- a/WebUI/FMIRatingsWeb/public_html/home-page.html
+++ b/WebUI/FMIRatingsWeb/public_html/home-page.html
@@ -66,7 +66,8 @@ and open the template in the editor.
                             <button type="submit" class="btn btn-default">Търси</button>
                         </form>
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="nonregistered-user-homepage.html">Изход</a></li>
+                            <li><a href="nonregistered-user-homepage.html" onclick ="localStorage.clear();">Изход</a></li>
+                           
                         </ul>
                     </div><!-- /.navbar-collapse -->
                 </div><!-- /.container-fluid -->
