show votes for each criteria

--- a/WebUI/FMIRatingsWeb/public_html/navbar-html/teacher-details/teacher-details.html
+++ b/WebUI/FMIRatingsWeb/public_html/navbar-html/teacher-details/teacher-details.html
@@ -25,7 +25,7 @@ and open the template in the editor.
                    <tr>
                         <td class="progress-label-td"><strong>Средна оценка:</strong></td>
                         <td>
-                            <strong>{{avarage}}</strong>
+                            <strong>{{sum / votes.length}}</strong>
                         </td>
                     </tr>
                     <tr ng-repeat="criterion in votes">
