--- a/WebUI/FMIRatingsWeb/public_html/navbar-html/teacher-details/teacher-details.html
+++ b/WebUI/FMIRatingsWeb/public_html/navbar-html/teacher-details/teacher-details.html
@@ -89,7 +89,7 @@ and open the template in the editor.
         <button type="button" class="btn btn-default" ng-click="vote(dataTeacher.id)">Оценка</button>
     </ul>
 
-    <div class = "container-fluid inner-container" id="teacher-choosen-tab-container">>
+    <div class = "container-fluid inner-container" id="teacher-choosen-tab-container">
         <div ng-show="showDetails" class="container-fluid inner-container">
             <h3>Курсове:</h3>
             <ul class="list-group">
