--- a/WebUI/FMIRatingsWeb/public_html/navbar-html/discipline-details/discipline-details.html
+++ b/WebUI/FMIRatingsWeb/public_html/navbar-html/discipline-details/discipline-details.html
@@ -51,9 +51,9 @@ and open the template in the editor.
         </ul>-->
 
     <div class="btn-group" role="group" aria-label="...">
-        <button type="button" class="btn btn-default" ng-click="info(dataCourse.id)">Подробна информация</button>
-        <button type="button" class="btn btn-default" ng-click="vote(dataCourse.id)">Оценка</button>
-        <button type="button" class="btn btn-default" ng-click="materials(dataCourse.id)">Материали</button>
+        <button type="button" class="btn btn-primary" ng-click="info(dataCourse.id)">Подробна информация</button>
+        <button type="button" class="btn btn-primary" ng-click="vote(dataCourse.id)">Оценка</button>
+        <button type="button" class="btn btn-primary" ng-click="materials(dataCourse.id)">Материали</button>
     </div>
 
     <div class = "container-fluid inner-container" id="discipline-choosen-tab-container">
