--- a/WebUI/FMIRatingsWeb/public_html/navbar-html/teachers-list-page.html
+++ b/WebUI/FMIRatingsWeb/public_html/navbar-html/teachers-list-page.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-
+<div class="panel-heading">
+    <h2 class="text-primary">Преподаватели</h2>
+</div>
 <div ng-repeat ='department in departments' class="list-group">
     <div class="panel panel-primary">
         <div class="panel-heading">
