--- a/WebUI/FMIRatingsWeb/public_html/navbar-html/discipline-details/discipline-details.html
+++ b/WebUI/FMIRatingsWeb/public_html/navbar-html/discipline-details/discipline-details.html
@@ -169,9 +169,9 @@ and open the template in the editor.
         <div ng-show="showMaterials" class = "container-fluid inner-container">
             <div class="container-fluid inner-container" id="upload-local-material">
                 <form class="form-inline center">
-                    <div class="form-group">
+                    <div class="form-group" ng-controller="FileUploadCtrl">
                         <label for="uploadMaterial">Качи материал от локалното устройство:</label>
-                        <input type="file" id="uploadMaterial">
+                        <input type="file" ng-model-instant id="uploadMaterial" multiple onchange="angular.element(this).scope().setFiles(this)">
                         <p class="help-block">Може да изберете материал от вашето устройство, който да качите.</p>
                     </div>
                 </form>
