change teachers response

--- a/WebUI/FMIRatingsWeb/public_html/navbar-html/discipline-details/discipline-details.html
+++ b/WebUI/FMIRatingsWeb/public_html/navbar-html/discipline-details/discipline-details.html
@@ -54,7 +54,7 @@ and open the template in the editor.
             <h3>Преподаватели:</h3>
             <ul class="list-group">
                 <li ng-repeat="teacher in dataCourse.teachers" class="list-group-item">
-                    <a >{{teacher}}</a>
+                    <a >{{teacher.name}}</a>
                 </li>
             </ul>
         </div>
