--- a/WebUI/FMIRatingsWeb/public_html/home-page.html
+++ b/WebUI/FMIRatingsWeb/public_html/home-page.html
@@ -59,12 +59,12 @@ and open the template in the editor.
                             <li ng-class="menuClass('disciplines')"><a href="#disciplines-list-page">Курсове</a></li>
                             <li ng-class="menuClass('teachers')"><a href="#teachers-list-page">Преподаватели</a></li>
                         </ul>
-                        <form class="navbar-form navbar-left" role="search">
+                        <div ng-controller="searchController" class="navbar-form navbar-left">
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Търси">
+                                <input type="search" class="form-control" required placeholder="Търси" ng-model="searchText">
                             </div>
-                            <button type="submit" class="btn btn-default">Търси</button>
-                        </form>
+                            <a href="#search" class="btn btn-default">Търси</a>
+                        </div>
                         <ul class="nav navbar-nav navbar-right">
                             <li><a href="nonregistered-user-homepage.html" onclick ="localStorage.clear();">Изход</a></li>
                            
