--- a/WebUI/FMIRatingsWeb/public_html/navbar-html/discipline-details/discipline-details.html
+++ b/WebUI/FMIRatingsWeb/public_html/navbar-html/discipline-details/discipline-details.html
@@ -191,7 +191,7 @@ and open the template in the editor.
                 <ul class="list-group">
                     <li ng-repeat="courseMaterial in courseMaterials"  class="list-group-item">
                         {{courseMaterial.filename}}
-                        <a href="#">
+                        <a href="http://95.111.16.46:6420/api/files/{{courseMaterial.id}}">
                             <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>
                         </a>
                     </li>
