design search form

--- a/WebUI/FMIRatingsWeb/public_html/home-page.html
+++ b/WebUI/FMIRatingsWeb/public_html/home-page.html
@@ -60,7 +60,7 @@ and open the template in the editor.
                             <li ng-class="menuClass('teachers')"><a href="#teachers-list-page">Преподаватели</a></li>
                         </ul>
                         <!--<div ng-controller="searchController" class="navbar-form navbar-left">-->
-                            <form  role="form" ng-controller="searchController" class="css-form" >
+                            <form  role="form" ng-controller="searchController" class="navbar-form navbar-left" >
                                 <div class="form-group">
                                     <input type="search" class="form-control" required placeholder="Търси" ng-model="searchText">
                                 </div>
