--- a/WebUI/FMIRatingsWeb/public_html/navbar-html/teacher-details/teacher-details.html
+++ b/WebUI/FMIRatingsWeb/public_html/navbar-html/teacher-details/teacher-details.html
@@ -74,7 +74,7 @@ and open the template in the editor.
                         <label for="Enthusiasm">Ентусиазъм</label>
                         <div class="input-group">
 
-                            <select class="form-control" ng-model="rating.enthusiasm" id="enthusiasm"  >
+                            <select class="form-control" ng-model="teachersRting.enthusiasm" id="enthusiasm"  >
                                 <option>1</option>
                                 <option>2</option>
                                 <option>3</option>
@@ -88,7 +88,7 @@ and open the template in the editor.
                         <label for="clarity">Яснота</label>
                         <div class="input-group">
 
-                            <select class="form-control" ng-model="rating.clarity" id="clarity"  >
+                            <select class="form-control" ng-model="teachersRting.clarity" id="clarity"  >
                                 <option>1</option>
                                 <option>2</option>
                                 <option>3</option>
@@ -101,7 +101,7 @@ and open the template in the editor.
                         <label for="evaluation">Критерии на оценяване</label>
                         <div class="input-group">
 
-                            <select class="form-control" ng-model="rating.evaluation" id="evaluation"  >
+                            <select class="form-control" ng-model="teachersRting.evaluation" id="evaluation"  >
                                 <option>1</option>
                                 <option>2</option>
                                 <option>3</option>
@@ -114,7 +114,7 @@ and open the template in the editor.
                         <label for="speed">Скорост на преподаване</label>
                         <div class="input-group">
 
-                            <select class="form-control" ng-model="rating.speed" id="speed" >
+                            <select class="form-control" ng-model="teachersRting.speed" id="speed" >
                                 <option>1</option>
                                 <option>2</option>
                                 <option>3</option>
@@ -128,7 +128,7 @@ and open the template in the editor.
                         <label for="scope">Обхват на преподавания материал</label>
                         <div class="input-group">
 
-                            <select class="form-control" ng-model="rating.scope" id="scope" >
+                            <select class="form-control" ng-model="teachersRting.scope" id="scope" >
                                 <option>1</option>
                                 <option>2</option>
                                 <option>3</option>
@@ -140,7 +140,7 @@ and open the template in the editor.
                     </div>
 
                     <div class="form-group rate-group">
-                        <textarea class="form-control" rows="3" cols="100" ng-model="rating.comment"></textarea>
+                        <textarea class="form-control" rows="3" cols="100" ng-model="teachersRting.comment"></textarea>
                     </div>
 
                     <div class="form-group rate-group">
