--- a/WebUI/FMIRatingsWeb/public_html/navbar-html/start-page.html
+++ b/WebUI/FMIRatingsWeb/public_html/navbar-html/start-page.html
@@ -4,7 +4,7 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<div id="start-page" class="container-fluid inner-container">
+<div id="start-page" class="container-fluid inner-container" ng-controller="mainController">
 
     <div class="col-sm-12 jumbotron " id="start-page-carousel-div">
         
