--- a/WebUI/FMIRatingsWeb/public_html/nonregistered-user-homepage.html
+++ b/WebUI/FMIRatingsWeb/public_html/nonregistered-user-homepage.html
@@ -44,7 +44,7 @@ and open the template in the editor.
                                     <form ng-submit="login()" role="form" ng-controller="LoginCtrl" class="css-form" >
                                         <div class="form-group">
                                             <label for="email">Потребителско име</label>
-                                            <input type="text" class="form-control" id="email" placeholder="Въведи email" ng-model="loginFormInfo.Name"  required>
+                                            <input type="text" class="form-control" id="email" placeholder="Въведи потребителско име" ng-model="loginFormInfo.Name"  required>
                                         </div>
                                         <div class="form-group">
                                             <label for="pass">Парола</label>
@@ -98,13 +98,13 @@ and open the template in the editor.
                                             </div>
                                         </div>
 
-                                        <div class="form-group">                                       
+<!--                                        <div class="form-group">                                       
                                             <label for="pass">Повтори парола</label>
                                             <div class="input-group">
                                                 <div class="input-group-addon">*</div>
                                                 <input type="password" class="form-control" id="password" ng-model="formInfo.RepeatPassword" placeholder="Повтори парола" required>
                                             </div>
-                                        </div>
+                                        </div>-->
 
                                         <div class="form-group">
                                             <label for="course">Курс</label>
